[gd_scene load_steps=3 format=3 uid="uid://c3jnq8mjxypd7"]

[ext_resource type="Script" path="res://main.gd" id="1_7pn6q"]
[ext_resource type="PackedScene" uid="uid://vt5w4yq5jq0m" path="res://victor_avatar.tscn" id="2_5w6h1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7pn6q")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="VictorAvatar" parent="." instance=ExtResource("2_5w6h1")]

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="TitleLabel" type="Label" parent="UI"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Victor Avatar - Real-Time Lip Sync"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "Ready"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="UI"]
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="UI/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start Microphone"

[node name="StopButton" type="Button" parent="UI/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Stop Microphone"

[node name="HSeparator3" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="VisemeLabel" type="Label" parent="UI"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Current Viseme: SILENT"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="UI"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "FPS: 60"
horizontal_alignment = 1

[node name="InstructionsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "Instructions:
1. Click 'Start Microphone' to enable audio input
2. Speak or make sounds into your microphone
3. Watch Victor's mouth animate in real-time based on your voice!

Note: Make sure to allow microphone permissions when prompted."
horizontal_alignment = 1
vertical_alignment = 1
